# BLGStreamlit

./: Home.py  LPL 2023 Summer - Player Stats - OraclesElixir.csv  pyproject.toml  requirements.txt
pages/: 2_Leaguepedia.py  3_DailyRank.py  4_LeaguePoints.py  5_SearchEngine.py  6_PlayerStat.py  7_Utils.py
