[tool.poetry]
name = "blgstreamlit"
version = "0.1.0"
description = ""
authors = ["limuxuale0927 <limuxuale0927@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.25.0"
pandas = "^2.0.3"
mwclient = "^0.10.1"
matplotlib = "^3.7.2"
leaguepedia-parser = "^2.0.2"
datetime = "^5.2"
riotwatcher = "^3.2.5"
lol-id-tools = "^2.0.1"
requests = "^2.31.0"
plotly = "^5.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
